Added MudCore entry to the MUDs section.

--- a/cv-public.tex
+++ b/cv-public.tex
@@ -163,7 +163,7 @@
 
 \item {\bf Tabletop RPGs:} AD\&D 2E, GURPS 4E, Pathfinder 2E
 
-\item {\bf MUDs:} Evennia
+\item {\bf MUDs:} MudCore, Evennia
 
 \item {\bf Sports \& Fitness:} Keepie uppie (football kick-ups), weightlifting
 
